force-app/main/default/objects/docutizexa__OproartsUser__c/docutizexa__OproartsUser__c.object-meta.xml
<CustomObject>
    <customHelpPage>docutizexa__OproartsHelp</customHelpPage>
    <label>OPROARTS User (document DX)</label>
    <nameField>
        <label>OPROARTS User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OPROARTS Users (document DX)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>