force-app/main/default/objects/docutizexa__OproartsUser__c/fields/docutizexa__Oproarts__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Oproarts__c</fullName>
    <label>OPROARTS</label>
    <referenceTo>docutizexa__Oproarts__c</referenceTo>
    <relationshipLabel>OPROARTS User</relationshipLabel>
    <relationshipName>OproartsUsers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>