force-app/main/default/objects/docutizexa__OproartsUser__c/fields/docutizexa__UID__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__UID__c</fullName>
    <label>UID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>