force-app/main/default/objects/docutizexa__OproartsUser__c/fields/docutizexa__UPW__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__UPW__c</fullName>
    <label>UPW</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>