force-app/main/default/objects/docutizexa__OproartsUser__c/fields/docutizexa__User__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OproartsUsers</relationshipName>
    <type>Lookup</type>
</CustomField>